RESOLVED FIXED310792
Address potential race in HTMLFrameElementBase::openURL()
https://bugs.webkit.org/show_bug.cgi?id=310792
Summary Address potential race in HTMLFrameElementBase::openURL()
Anne van Kesteren
Reported 2026-03-26 01:24:57 PDT
.
Attachments
Anne van Kesteren
Comment 1 2026-03-26 01:26:06 PDT
EWS
Comment 2 2026-03-26 07:57:57 PDT
Committed 309991@main (52682225d4ce): <https://commits.webkit.org/309991@main> Reviewed commits have been landed. Closing PR #61397 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-03-26 07:58:12 PDT
Note You need to log in before you can comment on or make changes to this bug.