Address potential race in HTMLFrameElementBase::openURL() https://bugs.webkit.org/show_bug.cgi?id=310792

Reviewed by Ryosuke Niwa.

m_frameURL can have changed by the time the lambda runs. We already
capture and use completeURL so we should use that here as well.

Canonical link: https://commits.webkit.org/309991@main